syntax = "proto3";

package auth.v1;


import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";


message User {
  int64 id = 1;
  string card_id = 2;
  string full_name = 3;
  string email = 4;
  string phone = 5;
  double balance  = 6;
  string status = 7;
  optional int64 current_trip_terminal_id = 8;
  google.protobuf.Timestamp registered_at = 9; 
  google.protobuf.Timestamp updated_at = 10;
}

message RegisterUserRequest {
  string card_id = 1;
  string full_name = 2;
  string email = 3;
  string phone = 4;
  double balance = 5;
}

message RegisterUserResponse {
  string msg = 1;
  string status = 2;
  optional User user = 3;
}

message UserSignInRequest {
  string email = 1;
}

message UserSignInResponse {
  string msg = 1;
  string status = 2;
  optional string jwt_token = 3;
}

message GetUserByCardIDRequest {
  string card_id = 1;  
}

message GetUserByCardIDResponse {
  string msg = 1;
  string status = 2;
  optional User user = 3;
}

message GreeterRequest {
  string name = 1;
}

message GreeterResponse {
  string hallo = 1;
}

service AuthService {
  rpc RegisterUser(RegisterUserRequest) returns (RegisterUserResponse) {
    option (google.api.http) = {
      post: "/auth/v1/signup"
      body: "*"
    };
  };


  rpc UserSignIn(UserSignInRequest) returns (UserSignInResponse) {
    option (google.api.http) = {
      post: "/auth/v1/signin"
      body: "*"
    };
  };


  rpc GetUserByCardID(GetUserByCardIDRequest) returns (GetUserByCardIDResponse) {
    option (google.api.http) = {
      post: "/auth/v1/getUserByCardID"
      body: "*"
    };
  };

  rpc Greeter(GreeterRequest) returns (GreeterResponse) {
    option (google.api.http) = {
      post: "/auth/v1/greeter"
      body: "*"
    };
  };

 
}
